# chariot-formal-contract-checker

./: CMakeLists.txt  README.md  install.sh  update.sh
algorithms/ForwardNumerics/: BaseTaylorFloating.h  BaseTaylorFloating.inch  BaseTaylorFloating.inctemplate  BaseTaylorFloating.template  BaseTaylorFloatingGeneric.h  BaseTaylorFloatingGeneric.template
algorithms/Numerics/: FixedPoint.h  FixedPoint.template  Floating.h  Floating.template  HostFloating.cpp  HostFloating.h  HostFloating.template  Integer.cpp  Integer.h  Integer.template  Numerics.hpp  Numerics.template
libutils/: CMakeLists.txt
src/: Contract.cpp  Contract.h  DomainValue.h  Expression.cpp  Expression.h  MemoryState.cpp  MemoryState.h  MemoryZone.cpp  MemoryZone.h  Processor.cpp  Processor.h  check_contract.py  contract_checker.cpp  contract_checker.h  contract_checker.py  contract_checker_future.py  decsec_callback.h  dll.cpp  dll.h  domsec_callback.h  target_address_decoder.h
tests/: TestContractChecker.cpp  commands.txt  contracts.json  example.c  example.out  example_api.c  integration.py
utils/JSON/: JSonLexer.cpp  JSonLexer.h  JSonParser.cpp  JSonParser.h  README.md
